# src/dorc-web/src/apis/dorc-api/models/index.ts
@@ -13,6 +13,7 @@ export * from './ComponentApiModelTemplateApiModel';
 export * from './ConfigValueApiModel';
 export * from './DaemonApiModel';
 export * from './DaemonAuditApiModel';
+export * from './DaemonObservationApiModel';
 export * from './DatabaseApiModel';
 export * from './DatabaseApiModelEnvironmentComponentsDto';
 export * from './DeployArtefactDto';
@@ -32,6 +33,7 @@ export * from './FlatPropertyValueApiModel';
 export * from './GetDatabaseApiModelListResponseDto';
 export * from './GetPropertyValuesAuditListResponseDto';
 export * from './GetDaemonAuditListResponseDto';
+export * from './GetDaemonObservationListResponseDto';
 export * from './GetRefDataAuditListResponseDto';
 export * from './GetRequestStatusesListResponseDto';
 export * from './GetScopedPropertyValuesResponseDto';
